--- a/game-of-life/style.css
+++ b/game-of-life/style.css
@@ -11,6 +11,21 @@
     margin-top: 10px; }
     #main #content #buttons #generations-btn:hover {
       cursor: default; }
+    #main #content #buttons #start-btn {
+      background-color: #00b300;
+      color: white; }
+      #main #content #buttons #start-btn:hover {
+        background-color: #00e600; }
+    #main #content #buttons #stop-btn {
+      background-color: #ff3333;
+      color: white; }
+      #main #content #buttons #stop-btn:hover {
+        background-color: #ff6666; }
+    #main #content #buttons #clear-btn {
+      background-color: #9a9a9a;
+      color: white; }
+      #main #content #buttons #clear-btn:hover {
+        background-color: #b3b3b3; }
   #main #content #board {
     margin-top: 10px;
     border: 1px solid black;
@@ -29,9 +44,9 @@
     #main #content #board .dead {
       background-color: black; }
     #main #content #board .alive {
-      background-color: #b3b3b3; }
+      background-color: #00e600; }
     #main #content #board .sick {
-      background-color: #676767; }
+      background-color: gray; }
 
 .footer {
   text-align: center;
