--- a/game-of-life/style.css
+++ b/game-of-life/style.css
@@ -1,8 +1,11 @@
+body, html {
+  background-color: #b3b3b3; }
+
 #top {
   text-align: center;
-  background-color: #f2f2f2;
+  background-color: #1f8ebd;
   width: 100%;
-  color: #4d4dff; }
+  color: white; }
 
 #main #content {
   text-align: center; }
@@ -22,13 +25,13 @@
       #main #content #buttons #stop-btn:hover {
         background-color: #ff6666; }
     #main #content #buttons #clear-btn {
-      background-color: #9a9a9a;
+      background-color: gray;
       color: white; }
       #main #content #buttons #clear-btn:hover {
         background-color: #b3b3b3; }
   #main #content #board {
     margin-top: 10px;
-    border: 1px solid black;
+    border: 2px solid white;
     width: 800px;
     height: 575px;
     margin: 0 auto;
@@ -42,7 +45,7 @@
     #main #content #board .tile:nth-child(70n + 1) {
       clear: both; }
     #main #content #board .dead {
-      background-color: #737373; }
+      background-color: gray; }
     #main #content #board .alive {
       background-color: #1aff1a; }
     #main #content #board .old {
