--- a/camper-leaderboard/style.scss
+++ b/camper-leaderboard/style.scss
@@ -8,24 +8,48 @@ body {
 
   h1 {
     text-align: center;
+
+    @media (max-width: 650px) {
+      font-size: 17px;
+    }
+  }
+  h3 {
+    @media (max-width: 650px) {
+      font-size: 12px;
+    }
   }
 }
 .content {
   text-align: center;
+
   table {
     width: 100%;
     margin: 15px;
     font-size: 15px;
     background-color: white;
+
+    @media (max-width: 650px) {
+      margin: 3px;
+      font-size: 12px;
+    }
   }
   td, th {
     border: 2px solid #663300;
     padding: 1.8rem;
     padding-left: 1rem;
+
+    @media (max-width: 650px) {
+      padding: .5rem;
+      padding-left: .5rem;
+    }
   }
   th {
     font-size: 20px;
     text-align: center;
+
+    @media (max-width: 650px) {
+      font-size: 11px;
+    }
   }
   td {
     color: #663300;
@@ -57,6 +81,10 @@ body {
   text-align: center;
   padding-top: 20px;
   color: #663300;
+
+  @media (max-width: 650px) {
+    padding-top: 10px;
+  }
 
   a {
     color: white;
