--- a/game-of-life/style.css
+++ b/game-of-life/style.css
@@ -1,17 +1,30 @@
 body, html {
-  background-color: #b3b3b3; }
+  background-color: #b3b3b3;
+  font-size: 10px; }
+  @media (max-width: 650px) {
+    body, html {
+      font-size: 5px; } }
 
 #top {
   text-align: center;
   background-color: #1f8ebd;
   width: 100%;
   color: white; }
+  @media (max-width: 650px) {
+    #top h1 {
+      font-size: 4em; } }
 
 #main #content {
   text-align: center; }
   #main #content #buttons {
     display: inline-block;
-    margin-top: 10px; }
+    margin-top: 1em; }
+    @media (max-width: 650px) {
+      #main #content #buttons {
+        margin-bottom: .5em; }
+        #main #content #buttons #start-btn, #main #content #buttons #stop-btn, #main #content #buttons #clear-btn, #main #content #buttons #generations-btn {
+          font-size: 2.5em;
+          padding: .5em; } }
     #main #content #buttons #generations-btn:hover {
       cursor: default; }
     #main #content #buttons #start-btn {
@@ -30,18 +43,38 @@ body, html {
       #main #content #buttons #clear-btn:hover {
         background-color: #b3b3b3; }
   #main #content #board {
-    margin-top: 10px;
-    border: 2px solid white;
+    margin-top: 1em;
+    border: .25em solid white;
     width: 800px;
     height: 575px;
     margin: 0 auto;
-    padding: 10px; }
+    padding: 1em; }
+    @media (max-width: 650px) {
+      #main #content #board {
+        height: 270px;
+        width: 275px; } }
+    @media (min-width: 650px) and (max-width: 800px) {
+      #main #content #board {
+        width: 700px;
+        height: 455px; } }
     #main #content #board .tile {
-      font-size: 10px;
-      width: 10px;
-      height: 10px;
+      font-size: 1em;
+      width: 1em;
+      height: 1em;
       float: left;
       margin: .5px; }
+      @media (max-width: 650px) {
+        #main #content #board .tile {
+          font-size: .9em;
+          width: .7em;
+          height: 1em;
+          margin: .3px; } }
+      @media (min-width: 650px) and (max-width: 800px) {
+        #main #content #board .tile {
+          font-size: 1em;
+          width: .9em;
+          height: .8em;
+          margin: .3px; } }
     #main #content #board .tile:nth-child(70n + 1) {
       clear: both; }
     #main #content #board .dead {
@@ -53,6 +86,13 @@ body, html {
 
 .footer {
   text-align: center;
-  margin-top: 100px; }
+  margin-top: 10em;
+  font-size: 1.5em; }
+  @media (max-width: 650px) {
+    .footer {
+      font-size: 1.5em; } }
+  @media (min-width: 650px) and (max-width: 800px) {
+    .footer {
+      font-size: 1.8em; } }
 
 /*# sourceMappingURL=style.css.map */
