--- a/game-of-life/style.scss
+++ b/game-of-life/style.scss
@@ -1,5 +1,10 @@
 body, html {
   background-color: darken(white, 30);
+  font-size: 10px;
+
+  @media (max-width: 650px) {
+    font-size: 5px;
+  }
 }
 
 #top {
@@ -7,6 +12,12 @@ body, html {
   background-color: darken(#32AADD, 10);
   width: 100%;
   color: white;
+
+  @media (max-width: 650px) {
+    h1 {
+      font-size: 4em;
+    }
+  }
 }
 #main {
   #content {
@@ -14,8 +25,16 @@ body, html {
 
     #buttons {
       display: inline-block;
-      margin-top : 10px;
+      margin-top : 1em;
 
+      @media (max-width: 650px) {
+        margin-bottom: .5em;
+
+        #start-btn, #stop-btn, #clear-btn, #generations-btn {
+          font-size: 2.5em;
+          padding: .5em;
+        }
+      }
       #generations-btn {
         &:hover {
           cursor: default;
@@ -44,19 +63,40 @@ body, html {
       }
     }
     #board {
-      margin-top: 10px;
-      border: 2px solid white;
+      margin-top: 1em;
+      border: .25em solid white;
       width: 800px;
       height: 575px;
       margin: 0 auto;
-      padding: 10px;
+      padding: 1em;
 
+      @media (max-width: 650px) {
+        height: 270px;
+        width: 275px;
+      }
+      @media (min-width: 650px) and (max-width: 800px) {
+        width: 700px;
+        height: 455px;
+      }
       .tile {
-        font-size: 10px;
-        width: 10px;
-        height: 10px;
+        font-size: 1em;
+        width: 1em;
+        height: 1em;
         float: left;
         margin: .5px;
+
+        @media (max-width: 650px) {
+          font-size: .9em;
+          width: .7em;
+          height: 1em;
+          margin: .3px;
+        }
+        @media (min-width: 650px) and (max-width: 800px) {
+          font-size: 1em;
+          width: .9em;
+          height: .8em;
+          margin: .3px;
+        }
       }
       .tile:nth-child(70n + 1) {
          clear: both;
@@ -75,5 +115,13 @@ body, html {
 }
 .footer {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 10em;
+  font-size: 1.5em;
+
+  @media (max-width: 650px) {
+    font-size: 1.5em;
+  }
+  @media (min-width: 650px) and (max-width: 800px) {
+    font-size: 1.8em;
+  }
 }
