--- a/javascript-calculator/stylesheet.scss
+++ b/javascript-calculator/stylesheet.scss
@@ -14,6 +14,13 @@ body {
   height: 60%;
   width: 25%;
   background-color: $primary-color;
+
+  @media (max-width: 650px) {
+    width: 80%;
+  }
+  @media (min-width: 650px) and (max-width: 800px) {
+    width: 40%;
+  }
 }
 input {
   text-align: right;
@@ -27,10 +34,21 @@ input {
   border: 2px solid $secondary-color;
   padding-right: 5px;
   padding-left: 5px;
+
+  @media (max-width: 650px) {
+    margin-left: 10px;
+    width: 90%;
+  }
 }
 #pad {
   padding-bottom: 5px;
-  
+
+  @media (max-width: 650px) {
+    padding-left: 15px;
+  }
+  @media (min-width: 650px) and (max-width: 800px) {
+    padding-left: 35px;
+  }
   button {
     font-size: .7em;
     margin-left: 5px;
@@ -38,15 +56,36 @@ input {
     background-color: $primary-color;
     border: none;
 
+    @media (max-width: 650px) {
+      margin-left: 1px;
+      width: 20%;
+    }
     &:hover {
       background-color: $tertiary-color;
       color: $secondary-color;
       cursor: pointer;
     }
   }
+  #change-sign {
+    @media (max-width: 650px) {
+      font-size: .5em;
+    }
+    @media (min-width: 650px) and (max-width: 800px) {
+      font-size: .5em;
+    }
+  }
   #zero {
     text-align: left;
     width: 135px;
     padding-left: 20px;
+
+    @media (max-width: 650px) {
+      width: 90px;
+      padding-left: 10px;
+    }
+    @media (min-width: 650px) and (max-width: 800px) {
+      width: 90px;
+      padding-left: 10px;
+    }
   }
 }
