--- a/markdown-previewer/style.scss
+++ b/markdown-previewer/style.scss
@@ -1,10 +1,14 @@
-
 body, html {
   background-color: darken(white, 40);
   font-size: 20px;
 }
+
 h1 {
   text-align: center;
+
+  @media (max-width: 650px) {
+    font-size: 1.1em;
+  }
 }
 #main {
   margin: 0 auto;
@@ -13,9 +17,35 @@ h1 {
   height: auto;
   background-color: darken(white, 20);
   padding: 1em;
+
+  @media (max-width: 650px) {
+    margin-top: .5em;
+  }
+  @media (min-width: 650px) and (max-width: 800px) {
+    margin-top: 1em;
+  }
 }
 textarea {
   height: 20em;
   width: 75%;
   resize: vertical;
+
+  @media (max-width: 650px) {
+    width: 100%;
+    height: 12em;
+    font-size: .8em;
+  }
+  @media (min-width: 650px) and (max-width: 800px) {
+    width: 100%;
+    height: 12em;
+    font-size: .8em;
+  }
+}
+.content {
+  @media (max-width: 650px) {
+    font-size: .8em;
+  }
+  @media (min-width: 650px) and (max-width: 800px) {
+    font-size: .8em;
+  }
 }
