--- a/markdown-previewer/view.jade
+++ b/markdown-previewer/view.jade
@@ -4,6 +4,7 @@ html
   head 
     meta(charset = "utf-8")
     meta(description content = "Markdown Output Previewer")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react.js")
