--- a/recipe-box/style.css
+++ b/recipe-box/style.css
@@ -9,17 +9,29 @@ body {
     text-align: center; }
 
 #content #recipe-list {
-  margin: 15px;
-  margin-top: 25px;
-  margin-left: 200px;
+  margin: .8em;
+  margin-top: 1.2em;
+  margin-left: 9em;
   width: 50%; }
+  @media (max-width: 650px) {
+    #content #recipe-list {
+      margin: .5em;
+      margin-top: 1.2em;
+      margin-left: 3em;
+      width: 75%; } }
 #content button {
-  margin-left: 200px; }
+  margin-left: 9em; }
+  @media (max-width: 650px) {
+    #content button {
+      margin-left: 3em; } }
 
 .footer {
   text-align: center;
-  padding-top: 250px;
+  padding-top: 10em;
   color: white; }
+  @media (max-width: 650px) {
+    .footer {
+      font-size: 13px; } }
   .footer a {
     color: #9a009a;
     text-decoration: none; }
