--- a/recipe-box/style.scss
+++ b/recipe-box/style.scss
@@ -12,19 +12,34 @@ body {
 }
 #content {
   #recipe-list {
-    margin: 15px;
-    margin-top: 25px;
-    margin-left: 200px;
+    margin: .8em;
+    margin-top: 1.2em;
+    margin-left: 9em;
     width: 50%;
+
+    @media (max-width: 650px) {
+      margin: .5em;
+      margin-top: 1.2em;
+      margin-left: 3em;
+      width: 75%;
+    }
   }
   button {
-    margin-left: 200px;
+    margin-left: 9em;
+
+    @media (max-width: 650px) {
+      margin-left: 3em;
+    }
   }
 }
 .footer {
   text-align: center;
-  padding-top: 250px;
+  padding-top: 10em;
   color: white;
+
+  @media (max-width: 650px) {
+    font-size: 13px;
+  }
 
   a {
     color: lighten(purple, 5);
