--- a/tic-tac-toe/stylesheet.css
+++ b/tic-tac-toe/stylesheet.css
@@ -16,15 +16,28 @@ body {
     background-color: white;
     text-align: center;
     margin: 15% auto;
-    height: 200px;
+    height: 5em;
     width: 40%;
     padding-top: 10px; }
+    @media (max-width: 650px) {
+      .overlay .messageBox {
+        height: 7em;
+        width: 75%;
+        font-size: .8em; } }
+    @media (min-width: 650px) and (max-width: 800px) {
+      .overlay .messageBox {
+        height: 5.7em;
+        width: 50%; } }
     .overlay .messageBox p {
       font-size: .6em; }
     .overlay .messageBox button {
       border-radius: 10px;
       font-size: 1em;
       width: 100px; }
+      @media (max-width: 650px) {
+        .overlay .messageBox button {
+          width: 75px;
+          font-size: 1.5em; } }
   .overlay #xSelect {
     background-color: #60FF90; }
     .overlay #xSelect:hover {
@@ -61,9 +74,24 @@ body {
     margin-top: 10px;
     margin-right: 10px;
     border-radius: 10px; }
+    @media (max-width: 650px) {
+      #board .tac {
+        height: 7em;
+        width: 27%;
+        margin-top: 3px;
+        margin-right: 3px; } }
+    @media (min-width: 650px) and (max-width: 800px) {
+      #board .tac {
+        height: 11em; } }
     #board .tac i {
       font-size: 10em;
       color: #000 !important; }
+      @media (max-width: 650px) {
+        #board .tac i {
+          font-size: 5em; } }
+      @media (min-width: 650px) and (max-width: 800px) {
+        #board .tac i {
+          font-size: 9em; } }
 
 #player-select {
   padding-top: 10px; }
