--- a/zimon-game/stylesheet.scss
+++ b/zimon-game/stylesheet.scss
@@ -57,9 +57,19 @@ body{
     width: 250px;
     height: 150px;
     margin: 15px;
+
+    @media (max-width: 650px) {
+      width: 175px;
+      height: 100px;
+      margin: 5px;
+    }
   }
   .row {
     padding-top: 20px;
+
+    @media (max-width: 650px) {
+      padding-top: 0;
+    }
   }
   #tile1 {
     background-color: $blue;
@@ -92,23 +102,47 @@ body{
   vertical-align: middle;
   text-align: center;
 
+  @media (max-width: 650px) {
+    padding-top: 5px;
+  }
+  @media (min-width: 650px) and (max-width: 800px) {
+    padding-top: 15px;
+  }
+
   label {
     font-size: 20px;
     margin-right: 10px;
     margin-left: 10px;
+
+    @media (max-width: 650px) {
+      font-size: 18px;
+    }
   }
   input {
     text-align: right;
     font-size: 30px;
     width: 10%;
     padding-right: 5px;
+
+    @media (max-width: 650px) {
+      font-size: 22px;
+    }
   }
   i {
     margin-top: 10px;
     padding: 10px 20px 10px 20px;
     font-size: 30px;
+
     &:hover {
       background-color: #60FF90;
+    }
+    @media (max-width: 650px) {
+      margin-top: 5px;
+      font-size: 22px;
+      padding: 8px 18px 8px 18px;
+    }
+    @media (min-width: 650px) and (max-width: 800px) {
+      margin-top: 5px;
     }
   }
   #start {
