--- a/fcc-dungeon-crawler/view.jade
+++ b/fcc-dungeon-crawler/view.jade
@@ -4,6 +4,7 @@ html
   head 
     meta(charset = "utf-8")
     meta(description content = "FCC Roguelike Dungeon Crawler")
+    meta(name="viewport", content="width=device-width initial-scale=1")
     
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
