--- a/dungeon-crawler/view.jade
+++ b/dungeon-crawler/view.jade
@@ -2,9 +2,9 @@ doctype html
 
 html
   head 
-    meta(charset = "utf-8")
-    meta(description content = "FCC Roguelike Dungeon Crawler")
-    meta(name="viewport", content="width=device-width initial-scale=1")
+    meta(charset="utf-8")
+    meta(description content="FCC Roguelike Dungeon Crawler")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
@@ -18,12 +18,14 @@ html
     title Dungeon Crawler
     
   body
+    #top.container
+      h1 Shoreside Dungeon
     #main.container
     
     script(type="text/javascript", src="script.js")
     
     p.footer
-      | A Roguelike Clone
+      | A Roguelike Dungeon Crawler
       br
       | Created by #[a(href="http://www.softwareontheshore.com", target="_blank") Software on the Shore] for 
       | #[a(href="http://www.freecodecamp.com", target="_blank") FreeCodeCamp].
