--- a/dungeon-crawler/view.jade
+++ b/dungeon-crawler/view.jade
@@ -8,9 +8,11 @@ html
     
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
+    
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react-dom.js")
-    script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js")
+    script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.2.1/redux.min.js")
+    script(type="text/javascript", src="https://npmcdn.com/expect/umd/expect.min.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.28.1/react-bootstrap.min.js")
     
     link(rel="stylesheet", href="style.css")
@@ -21,11 +23,10 @@ html
     #top.container
       h1 Shoreside Dungeon
     #main.container
-    
-    script(type="text/javascript", src="script.js")
-    
     p.footer
       | A Roguelike Dungeon Crawler
       br
       | Created by #[a(href="http://www.softwareontheshore.com", target="_blank") Software on the Shore] for 
       | #[a(href="http://www.freecodecamp.com", target="_blank") FreeCodeCamp].
+      
+    script(type="text/javascript", src="script.js")
