--- a/dungeon-crawler/view.jade
+++ b/dungeon-crawler/view.jade
@@ -9,6 +9,8 @@ html
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css")
     
+    
+    script(src="https://rawgit.com/ondras/rot.js/master/rot.min.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react-dom.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.2.1/redux.min.js")
