--- a/dungeon-crawler/style.css
+++ b/dungeon-crawler/style.css
@@ -1,5 +1,6 @@
 body, html {
-  font-size: 20px; }
+  font-size: 20px;
+  background-color: #b3b3b3; }
 
 #top {
   width: 100%;
@@ -19,7 +20,10 @@ body, html {
     #main #content #control-panel {
       display: inline-block;
       font-size: .9em;
-      margin-bottom: 1.5em; }
+      padding: .5em;
+      margin-bottom: 1em;
+      border: .2em solid black;
+      background-color: white; }
       #main #content #control-panel .display-label, #main #content #control-panel .tracking-label {
         background-color: white;
         color: gray; }
@@ -30,7 +34,7 @@ body, html {
 
 .footer {
   text-align: center;
-  margin-top: 10em;
+  margin-top: 1em;
   font-size: .6em; }
 
 /*# sourceMappingURL=style.css.map */
