--- a/dungeon-crawler/style.css
+++ b/dungeon-crawler/style.css
@@ -2,6 +2,13 @@ body, html {
   font-size: 20px;
   background-color: #b3b3b3; }
 
+canvas {
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block; }
+
 #top {
   width: 100%;
   text-align: center; }
