--- a/dungeon-crawler/style.scss
+++ b/dungeon-crawler/style.scss
@@ -21,15 +21,6 @@ canvas {
 
     #buttons {
       display: inline-block;
-
-      #restart-btn {
-        background-color: lighten(gray, 30);
-        color: black;
-
-        &:hover {
-          background-color: white;
-        }
-      }
     }
     #control-panel {
       display: inline-block;
@@ -50,6 +41,12 @@ canvas {
         font-size: 1em;
       }
     }
+    #messages {
+      width: 50%;
+      resize: none;
+      margin: .2em;
+      font-size: .7em;
+    }
   }
 }
 
@@ -57,4 +54,8 @@ canvas {
   text-align: center;
   margin-top: 1em;
   font-size: .6em;
+}
+
+.instr {
+  font-size: .7em;
 }
