--- a/dungeon-crawler/style.css
+++ b/dungeon-crawler/style.css
@@ -37,7 +37,8 @@ canvas {
       width: 50%;
       resize: none;
       margin: .2em;
-      font-size: .7em; }
+      font-size: .7em;
+      color: gray; }
 
 .footer {
   text-align: center;
