finished dungeon-crawler fight function and all UI components

--- a/dungeon-crawler/view.jade
+++ b/dungeon-crawler/view.jade
@@ -22,7 +22,7 @@ html
     
   body
     #top.container
-      h1 Shoreside Dungeon
+      h1 Shoreside Text Crawler
     #main.container
     p.footer
       | A Roguelike Dungeon Crawler
