--- a/dungeon-crawler/style.css
+++ b/dungeon-crawler/style.css
@@ -23,20 +23,20 @@ canvas {
       display: inline-block;
       font-size: .9em;
       padding: .5em;
-      margin-bottom: 1em;
+      margin-bottom: .5em;
       border: .2em solid black;
       background-color: white; }
       #main #content #control-panel .display-label, #main #content #control-panel .tracking-label {
         background-color: white;
         color: gray; }
-      #main #content #control-panel .display-label {
+      #main #content #control-panel .tracking-label {
         margin-left: .25em;
         font-weight: bolder;
         font-size: 1em; }
     #main #content #messages {
       width: 50%;
       resize: none;
-      margin: .2em;
+      margin-bottom: .2em;
       font-size: .7em;
       color: gray; }
 
@@ -46,6 +46,7 @@ canvas {
   font-size: .6em; }
 
 .instr {
+  text-align: center;
   font-size: .7em; }
 
 /*# sourceMappingURL=style.css.map */
