--- a/dungeon-crawler/style.scss
+++ b/dungeon-crawler/style.scss
@@ -26,7 +26,7 @@ canvas {
       display: inline-block;
       font-size: .9em;
       padding: .5em;
-      margin-bottom: 1em;
+      margin-bottom: .5em;
       border: .2em solid black;
       background-color: white;
 
@@ -35,7 +35,7 @@ canvas {
         color: gray;
       }
 
-      .display-label {
+      .tracking-label {
         margin-left: .25em;
         font-weight: bolder;
         font-size: 1em;
@@ -44,7 +44,7 @@ canvas {
     #messages {
       width: 50%;
       resize: none;
-      margin: .2em;
+      margin-bottom: .2em;
       font-size: .7em;
       color: gray;
     }
@@ -58,5 +58,6 @@ canvas {
 }
 
 .instr {
+  text-align: center;
   font-size: .7em;
 }
