--- a/frameworks-and-databases/D3Prototypes/style.scss
+++ b/frameworks-and-databases/D3Prototypes/style.scss
@@ -67,6 +67,9 @@
           font-size: 0.8em;
           font-weight: normal;
         }
+        .heatLabel {
+          font-size: 1.3em;
+        }
       }
     }
   }
