--- a/frameworks-and-databases/D3Prototypes/style.scss
+++ b/frameworks-and-databases/D3Prototypes/style.scss
@@ -78,3 +78,12 @@
   text-align: center;
   margin: 1em;
 }
+.node {
+  stroke: #fff;
+  stroke-width: 1.5px;
+}
+
+.edge {
+  stroke: #999;
+  stroke-opacity: .6;
+}
