--- a/frameworks-and-databases/D3Prototypes/style.scss
+++ b/frameworks-and-databases/D3Prototypes/style.scss
@@ -70,6 +70,10 @@
         .heatLabel {
           font-size: 1.3em;
         }
+        .forced-img {
+          height: auto;
+          width: 25px;
+        }
       }
     }
   }
