finished current d3 projects

--- a/frameworks-and-databases/D3Prototypes/data-visualization.jade
+++ b/frameworks-and-databases/D3Prototypes/data-visualization.jade
@@ -9,6 +9,7 @@ html
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
     
     script(type="text/javascript", src="https://d3js.org/d3.v3.min.js", charset="utf-8")
+    script(type="text/javascript", src="https://d3js.org/topojson.v1.min.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react-dom.js")
     script(type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.28.1/react-bootstrap.min.js")
